Fix for "Inbox Revamp" being cut off in the header

--- a/css/ui.css
+++ b/css/ui.css
@@ -4,7 +4,7 @@
 
 #header span.pagename.selected {
   color: transparent;
-  width: 115px;
+  width: 130px;
   overflow: hidden;
   display: inline-block;
   white-space: nowrap; }
